# swe-architect-mcp

./: .env.example  .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  main.py  mcp_server_config.json  pyproject.toml  requirements.txt
archive/se_principles_mcp/: __init__.py  __main__.py  server.py
archive/se_principles_mcp/llm/: __init__.py  anthropic.py  base.py  factory.py  google.py  openai.py
archive/se_principles_mcp/prompts/: __init__.py  analyze_principles.py  architecture.py  boilerplate.py  complexity.py  concurrency.py  detect_smells.py  error_handling.py  explain.py  naming.py  pragmatic_review.py  refactor.py  solid_check.py  suggest_pattern.py  testing_principles.py
archive/se_principles_mcp/tools/: __init__.py  analyze_principles.py  architecture_review.py  check_concurrency.py  check_error_handling.py  check_solid.py  check_testing_principles.py  complexity_analysis.py  detect_code_smells.py  explain_principle.py  generate_boilerplate.py  pragmatic_review.py  refactor_code.py  (+2 more)
docs/: PROJECT_DOCUMENTATION.md
lectures/: 5_chapter07.ppt  Interface Analysis and Design.ppt  Requirements Modelling.ppt  SPM.ppt  Software Testing.ppt  Week 1.ppt  Week 2.ppt  Week 3.ppt  Week 4.ppt  Week_5_Requirement Engineering_Part_1.pptx  Week_6_Requirement Engineering_Part_2.pptx  Week_9_10_Software Design.ppt
src/se_lifecycle_mcp/: __init__.py  __main__.py  diagram_renderer.py  models.py  server.py  workspace.py
src/swe_architect_mcp/: __init__.py  __main__.py  diagram_renderer.py  models.py  server.py  workspace.py
tests/: test_lifecycle_tools.py
(+35 files in other folders)
